third commit to dev

--- a/Pages/Contact.cshtml
+++ b/Pages/Contact.cshtml
@@ -74,7 +74,13 @@
                     Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.
                     Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequa
 
+
+                    <!--addd this paragraph-->
+                    Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.
+                    Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequ
+
                 </p>
+
                 <h3>Onosai Auva'a'</h3>
                 <p>Church Minister</p>
             </div>
