--- a/Pages/Contact.cshtml
+++ b/Pages/Contact.cshtml
@@ -80,7 +80,7 @@
                     Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequ
 
                     <!--addd this paragraph again-->
-                    Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.
+                    Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.kljrkl
                     
 
                 </p>
